elyreacts/src/pages/styles/Profile.module.scss
@import "../../variables.scss";

.pageHeader {
    position: relative;
    display: grid;
    grid-template-rows: repeat(4, max-content);
    grid-template-columns: 1fr auto 1fr;
    justify-items: center;

    width: 100%;
    max-width: $max-width_content;

    margin: 2.5rem auto 1rem auto; // 1rem to replace bottom padding
    padding: 1rem;

    &::after {
        content: "";
        position: absolute;
        z-index: -1;
        bottom: 1rem; // Padding
        left: 25%;

        height: 0.25rem;
        width: 50%;

        background: $color_brand_primary;
    }

    & > h1 {
        grid-area: 1 / 2 / 2 / 3;

        text-align: center;
    }

    & > p {
        grid-area: 2 / 2 / 3 / 3;

        margin-top: 0.5rem;

        text-align: center;
    }

    & > div.reportButtonContainer {
        grid-area: 1 / 3 / 2 / 4;

        font-size: 0.75rem;
    }

    & > div.statsContainer {
        grid-area: 3 / 2 / 4 / 3;

        display: grid;
        grid-template-columns: repeat(2, 1fr);
        grid-gap: 0.5rem;

        margin-top: 1.5rem;

        & > div {
            display: grid;
            grid-template-rows: repeat(2, 1fr);

            & > span {
                margin: 0 auto;
                padding: 0.125rem;

                text-transform: uppercase;

                color: $color_text_alt;
            }

            & > span:last-of-type {
                margin-top: 0.25rem;
                font-size: 0.8rem;
            }
        }
    }

    & > div.imageContainer {
        grid-area: 4 / 2 / 5 / 3;

        box-sizing: border-box;

        height: 8.5rem;
        width: 8.5rem;
        margin: 1.5rem 0 -4.25rem 0;

        border: 0.5rem solid $color_background;

        & > img {
            height: 100%;
            width: 100%;

            border-radius: 50%;
        }
    }
}

.contentContainer {
    padding-top: 4rem;
}

@media only screen and (max-width: $media_width_tablet) {
    .pageHeader {
        grid-template-rows: repeat(5, max-content);

        &::after {
            display: none;
        }

        & > h1 {
            grid-area: 2 / 2 / 3 / 3;
        }

        & > p {
            grid-area: 3 / 2 / 4 / 3;
        }

        & > div.reportButtonContainer {
            grid-area: 1 / 2 / 2 / 3;
        }

        & > div.statsContainer {
            grid-area: 4 / 2 / 5 / 3;
        }

        & > div.imageContainer {
            grid-area: 5 / 2 / 6 / 3;
        }
    }
}

